@@ -5,6 +5,7 @@ please update the categories "new features" and "bugfixes" before a pull request
 version 1.2.0
 new features:
 - merge hdf5 utility has multithreading option
+- distance cut can sum up all sourounding shower energies to properly account for possible interference
 
 
 version 1.1.2 - 
